--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ckeditor5-custom-build",
   "author": "CKSource",
+  "main": "build/ckeditor.js",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
   "version": "0.0.1",
   "license": "SEE LICENSE IN LICENSE.md",
